--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -485,7 +485,7 @@ color: #FAFAFA;
 #ContactUs { 
   position: relative; 
   margin: 0 auto; 
-  width: 90%; 
+  width: 1440px; 
   height: 777px; 
   margin-top: 140px;
 }
